--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                         src="./assets//images//avatar-1.jpg"
                         alt="User Avatar"
                       />
-                      <span class="user__name no-wrap">محمد محمدی</span>
+                      <p class="user__name no-wrap">محمد محمدی</p>
                     </div>
                   </div>
 
                   <div class="request__btn">
                     <button class="btn btn--primary btn--block">
-                      <span> مشاهده درخواست</span>
+                      مشاهده درخواست
                     </button>
                   </div>
                 </span>
